@@ -27,7 +27,6 @@ import java.io.IOException;
 import java.io.StringWriter;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Modifier;
-import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -89,7 +88,7 @@ public class StringEscapeUtilsTest {
         final String expected = input;
         final String actual = StringEscapeUtils.escapeJava(input);
 
-        /**
+        /*
          * In 2.4 StringEscapeUtils.escapeJava(String) escapes '/' characters, which are not a valid character to escape
          * in a Java string.
          */
@@ -235,8 +234,8 @@ public class StringEscapeUtilsTest {
         assertEquals("\u0080\u009F", StringEscapeUtils.unescapeHtml4("&#X80;&#X9F;"), "hex number unescape");
         // Test all Character values:
         for (char i = Character.MIN_VALUE; i < Character.MAX_VALUE; i++) {
-            final Character c1 = new Character(i);
-            final Character c2 = new Character((char) (i+1));
+            final Character c1 = Character.valueOf(i);
+            final Character c2 = Character.valueOf((char) (i+1));
             final String expected = c1.toString() + c2.toString();
             final String escapedC1 = "&#x" + Integer.toHexString((c1.charValue())) + ";";
             final String escapedC2 = "&#x" + Integer.toHexString((c2.charValue())) + ";";
@@ -378,7 +377,7 @@ public class StringEscapeUtilsTest {
     }
 
     // Tests issue #38569
-    // http://issues.apache.org/bugzilla/show_bug.cgi?id=38569
+    // https://issues.apache.org/bugzilla/show_bug.cgi?id=38569
     @Test
     public void testStandaloneAmphersand() {
         assertEquals("<P&O>", StringEscapeUtils.unescapeHtml4("&lt;P&O&gt;"));
@@ -479,7 +478,7 @@ public class StringEscapeUtilsTest {
         // codepoint: U+1D362
         final byte[] data = new byte[] { (byte) 0xF0, (byte) 0x9D, (byte) 0x8D, (byte) 0xA2 };
 
-        final String original = new String(data, Charset.forName("UTF8"));
+        final String original = new String(data, StandardCharsets.UTF_8);
 
         final String escaped = StringEscapeUtils.escapeHtml4( original );
         assertEquals(original, escaped, "High Unicode should not have been escaped");
@@ -501,11 +500,11 @@ public class StringEscapeUtilsTest {
         final String original = "\u304B\u304C\u3068";
         final String escaped = StringEscapeUtils.escapeHtml4(original);
         assertEquals(original, escaped,
-                "Hiragana character Unicode behaviour should not be being escaped by escapeHtml4");
+                "Hiragana character Unicode behavior should not be being escaped by escapeHtml4");
 
         final String unescaped = StringEscapeUtils.unescapeHtml4( escaped );
 
-        assertEquals(escaped, unescaped, "Hiragana character Unicode behaviour has changed - expected no unescaping");
+        assertEquals(escaped, unescaped, "Hiragana character Unicode behavior has changed - expected no unescaping");
     }
 
     /**
